--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href="/contact">Contact</a></li>
 	    <li><a href="/about">About</a></li>
 	    <li><a href="/carrier">account</a></li>
+        <li><a href="/carrier">Subscription</a></li>
         </ul>
     </nav>
     <section>
